Refactor InventoryServiceImpl and tests for improved clarity; update assertion order in EntityTest and enhance random stock generation in TestUtils
Co-authored-by: Copilot <copilot@github.com>